tutorial is working, notebook upgrade ==> use docx + jupyter notebook and the project should be Ok

--- a/example_of_object_detection_usage.ipynb
+++ b/example_of_object_detection_usage.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -106,15 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from http://download.tensorflow.org/models/object_detection/tf2/20200711/centernet_hg104_1024x1024_coco17_tpu-32.tar.gz\n",
-      "1426464768/1426460092 [==============================] - 267s 0us/step\n"
+      "C:\\Users\\arnau\\.keras\\datasets\\centernet_hg104_1024x1024_coco17_tpu-32\n"
      ]
     }
    ],
@@ -130,7 +129,8 @@
     "\n",
     "MODEL_DATE = '20200711'\n",
     "MODEL_NAME = 'centernet_hg104_1024x1024_coco17_tpu-32'\n",
-    "PATH_TO_MODEL_DIR = download_model(MODEL_NAME, MODEL_DATE)"
+    "PATH_TO_MODEL_DIR = download_model(MODEL_NAME, MODEL_DATE)\n",
+    "print(PATH_TO_MODEL_DIR)"
    ]
   },
   {
